<resources>
    <!--<string name="app_name">LightWeightMusicPlayer</string>-->
    <string name="app_name">CNUO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="action_settings">设置</string>
    <string name="drawer_item_home">主页</string>
    <string name="drawer_item_local">本地音乐</string>
    <string name="drawer_item_personality">个性背景</string>
    <string name="drawer_item_folder">清除最近播放</string>
    <string name="drawer_item_timer">定时关闭</string>
    <string name="drawer_item_skin">个性换肤</string>
    <string name="drawer_item_about">关于CNUO</string>

    <string name="recent_play">最近播放</string>
    <string name="current_play">正在播放</string>
    <string name="see_all">查看全部</string>
    <string name="play_list">我喜欢的</string>
    <string name="empty_tip">空空如也</string>
    <string name="recent_empty_tip">最近播放列表为空</string>
    <string name="favorite_empty_tip">我喜欢的列表为空</string>

    <string name="song_num">%d首歌曲</string>
    <string name="need_permission">权限需要</string>
    <string name="permission_tip">音乐季需要获得访问您设备上的音乐的权限，现在去设置界面打开它好吗？</string>
    <string name="need_permission_tip">本地音乐需要读取手机内存权限</string>
    <string name="choose_theme_color">请选择主题颜色</string>
    <string name="current_version">应用当前版本号：%s</string>
    <string name="my_blog_address">我的博客地址：%s</string>
    <string name="my_github_address">此项目Github地址：%s</string>
    <string name="login">登录</string>
    <string name="user_name_placeholder">请输入用户名</string>
    <string name="password_placeholder">密码是什么东东，完全不需要</string>
    <string name="forget_password">忘记密码？</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="email_placeholder">请填写你的邮箱</string>
    <string name="tip_forget_password">请填写你的邮箱，虽然我也不会发邮件给你</string>
    <string name="take_picture">拍照</string>
    <string name="take_picture_tip">图片将应用于音乐播放界面</string>
    <string name="apply">应用</string>
    <string name="local_no_data">您的本地没有音乐</string>
    <string name="local_no_favorite">喜欢的列表为空</string>
    <string name="translation_thumb">thumb</string>

    <!--music transition-->
    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>

    <!--preferences utils-->
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>

    <string name="error_no_metadata">Unable to retrieve metadata.</string>

    <string name="casting_to_device">Casting to %1$s</string>
    <string name="notification_channel">UAMP_Channel_ID</string>
    <string name="notification_channel_description">Channel ID for UAMP</string>

</resources>
