<?xml version="1.0" encoding="utf-8"?>
<com.ckw.lightweightmusicplayer.weight.InsetsPercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorListItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.ckw.lightweightmusicplayer.weight.cover_view.MusicCoverView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:transitionName="@string/transition_name_cover"
        app:layout_heightPercent="35%"
        app:shape="circle" />


    <include
        android:id="@+id/title"
        layout="@layout/track_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="10%"/>

    <com.ckw.lightweightmusicplayer.weight.ProgressView
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:transitionName="@string/transition_name_progress"
        app:layout_aspectRatio="100%"
        app:layout_heightPercent="40%"
         />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="center"
        app:srcCompat="@android:drawable/ic_media_pause"
        android:transitionName="@string/transition_name_fab"/>

    <Space
        android:id="@+id/timers_anchor"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="25%"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toStartOf="@id/timers_anchor"
        android:textColor="@color/colorWhite"
        android:transitionName="@string/transition_name_time"
        tools:text="02:30"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timers_anchor"
        android:layout_toEndOf="@id/timers_anchor"
        android:textColor="@color/colorWhite"
        android:transitionName="@string/transition_name_duration"
        tools:text="04:30"/>

    <ImageView
        android:id="@+id/iv_favorite"
        android:src="@mipmap/ic_favorite_default"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/controls"
        android:layout_centerHorizontal="true"
        android:background="@color/colorListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:transitionGroup="true"
        app:layout_marginBottomPercent="5%">

        <ImageView
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_skip_previous_white_24dp"/>

        <ImageView
            android:id="@+id/repeat"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_repeat_white_24dp"/>


        <ImageView
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_skip_next_white_24dp"/>

    </LinearLayout>

</com.ckw.lightweightmusicplayer.weight.InsetsPercentRelativeLayout>
